add support request feature (positive flow)

--- a/cypress/pages/.gitignore
+++ b/cypress/pages/.gitignore
@@ -34,3 +34,6 @@
 !prerequisites/PrerequisitesInstalaServiceOrderCreationPage.js
 !prerequisites/PrerequisitesInstalaServiceOrderManagement.js
 !prerequisites/PrerequisitesIntalaAcceptanceTermPage.js
+!supportRequest
+!supportRequest/SupportRequestManagementPage.js
+!supportRequest/SupportRequestPage.js
