--- a/.prod.env
+++ b/.prod.env
@@ -1,22 +1,27 @@
 BASE_URL=https://orcamentos.leroymerlin.pt
 NODE_OPTIONS=--max-http-header-size=1000000000
-ADMIN_COTAZO_USERNAME=*********
-ADMIN_COTAZO_PASSWORD=*********
-INSTALLER_COTAZO_USERNAME=*********
-INSTALLER_COTAZO_PASSWORD=*********
-TECHNICIAN_USERNAME=*********
-TECHNICIAN_PASSWORD=*********
-USERNAME_ADEO=********
-PASSWORD_ADEO=********
 INSTALA_BASE_URL=https://instala.leroymerlin.pt/
+INSTALA_CUSTOMER_PORTAL_BASE_URL=https://instala-client.leroymerlin.pt/
 INSTALA_LOGIN_URL=https://instala.leroymerlin.pt/ping-auth?token=***
+ADEO_USERNAME=********
+ADEO_PASSWORD=********
+STORE_NAME=CHAVES
+PYXIS_NUMBER=#######
 CUSTOMER_FISCAL_ID=000000000
 CUSTOMER_NAME=Automation Test
 CUSTOMER_EMAIL=example@example.pt
-CUSTOMER_PHONE_NUMBER=913######
+CUSTOMER_PHONE_NUMBER=351913######
 CUSTOMER_POSTAL_CODE=####-###
 CUSTOMER_COUNTRY=Country
 CUSTOMER_CITY=City
 CUSTOMER_ADDRESS=RUA ...
 CUSTOMER_ADDRESS_NUMBER=##
 SUPPLIER_NAME=Supplier ...
+ADMIN_COTAZO_USERNAME=*********
+ADMIN_COTAZO_PASSWORD=*********
+INSTALLER_COTAZO_USERNAME=*********
+INSTALLER_COTAZO_PASSWORD=*********
+TECHNICIAN_USERNAME=*********
+TECHNICIAN_PASSWORD=*********
+TECHNICIAN_EMAIL=example@example.pt
+
