addition of the environment variable "TRANSLATION_INSTALA_CONFIRMATION_TEXT_ACCEPTANCE_CONDITIONS" for translation difference between UAT and production environment

--- a/.prod.env
+++ b/.prod.env
@@ -3,6 +3,7 @@ NODE_OPTIONS=--max-http-header-size=1000000000
 INSTALA_BASE_URL=https://instala.leroymerlin.pt/
 INSTALA_CUSTOMER_PORTAL_BASE_URL=https://instala-client.leroymerlin.pt/
 INSTALA_LOGIN_URL=https://instala.leroymerlin.pt/ping-auth?token=***
+TRANSLATION_INSTALA_CONFIRMATION_TEXT_ACCEPTANCE_CONDITIONS='Condições aceites'
 ADEO_USERNAME=********
 ADEO_PASSWORD=********
 STORE_NAME=CHAVES
@@ -24,4 +25,3 @@ INSTALLER_COTAZO_PASSWORD=*********
 TECHNICIAN_USERNAME=*********
 TECHNICIAN_PASSWORD=*********
 TECHNICIAN_EMAIL=example@example.pt
-
