--- a/cypress/e2e/features/.gitignore
+++ b/cypress/e2e/features/.gitignore
@@ -3,6 +3,7 @@
 !.gitignore
 !T01_login.feature
 !T02_prerequisites.feature
+!T03_budget_creation_steps.feature
 !T04_budget_creation.feature
 !T05_support_request.feature
 !test.feature
