--- a/.prod.env
+++ b/.prod.env
@@ -1,6 +1,6 @@
 BASE_URL=https://orcamentos.leroymerlin.pt
 NODE_OPTIONS=--max-http-header-size=1000000000
-INSTALA_BASE_URL=https://instala.leroymerlin.pt/
+INSTALA_BASE_URL=https://instala.leroymerlin.pt
 INSTALA_CUSTOMER_PORTAL_BASE_URL=https://instala-client.leroymerlin.pt/
 INSTALA_LOGIN_URL=https://instala.leroymerlin.pt/ping-auth?token=***
 TRANSLATION_INSTALA_CONFIRMATION_TEXT_ACCEPTANCE_CONDITIONS='Condições aceites'
