--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@badeball/cypress-cucumber-preprocessor": "^11.4.0",
     "@bahmutov/cypress-esbuild-preprocessor": "^2.1.3",
     "cypress": "^10.3.1",
+    "cypress-slow-down": "^1.2.1",
     "esbuild": "^0.14.48",
     "multiple-cucumber-html-reporter": "^1.21.4"
   },
