Incorporation of tags with the test identifier in Jira

--- a/cypress/e2e/features/.gitignore
+++ b/cypress/e2e/features/.gitignore
@@ -1,13 +1,13 @@
 *
 */
 !.gitignore
-!T01_login.feature
-!T02_prerequisites.feature
-!T03_budget_creation_steps.feature
-!T04_budget_creation.feature
-!T05_budget_acceptance_flow.feature
-!T06_budget_refusal_flow.feature
-!T07_new_budget_version-budget_acceptance_flow.feature
-!T08_new_budget_version-budget_refusal_flow.feature
-!T09_support_request.feature
+!LMPTCOTAZO-199_login.feature
+!LMPTCOTAZO-200_prerequisites.feature
+!LMPTCOTAZO-201_budget_creation_steps.feature
+!LMPTCOTAZO-202_budget_creation.feature
+!LMPTCOTAZO-203_budget_acceptance_flow.feature
+!LMPTCOTAZO-204_budget_refusal_flow.feature
+!LMPTCOTAZO-205_new_budget_version-budget_acceptance_flow.feature
+!LMPTCOTAZO-206_new_budget_version-budget_refusal_flow.feature
+!LMPTCOTAZO-207_support_request.feature
 !test.feature
