--- a/.dev.env
+++ b/.dev.env
@@ -7,15 +7,17 @@ TRANSLATION_INSTALA_CONFIRMATION_TEXT_ACCEPTANCE_CONDITIONS='Condições aceitas
 ADEO_USERNAME=********
 ADEO_PASSWORD=********
 STORE_NAME=CHAVES
+PYXIS_NUMBER=123456
 CUSTOMER_FISCAL_ID=000000000
 CUSTOMER_NAME=Automation Test
 CUSTOMER_EMAIL=example@example.pt
-CUSTOMER_PHONE_NUMBER=351913######
+CUSTOMER_PHONE_NUMBER=913######
 CUSTOMER_POSTAL_CODE=####-###
 CUSTOMER_COUNTRY=Country
 CUSTOMER_CITY=City
 CUSTOMER_ADDRESS=RUA ...
 CUSTOMER_ADDRESS_NUMBER=##
+SERVICE_GROUP=Móvel de Casa de Banho
 SUPPLIER_NAME=Supplier ...
 COTAZO_MODERATOR_USERNAME=*********
 COTAZO_MODERATOR_PASSWORD=*********
