--- a/cypress/e2e/features/.gitignore
+++ b/cypress/e2e/features/.gitignore
@@ -14,7 +14,7 @@
 !LMPTCOTAZO-248_user_profile_access_control.feature
 !LMPTCOTAZO-252_user_group_access_control.feature
 !test.feature
-!verify_dashboard_access.feature
+!LMPTCOTAZO-260_verify_dashboard_access.feature
 !verify_budget_access.feature
 !verify_configuration_access.feature
 !verify_analysis_access.feature
