update cypress environment variables

--- a/.dev.env
+++ b/.dev.env
@@ -1,7 +1,7 @@
 BASE_URL=https://front-fe-qua.gke-mutu-nprd-mxiq.priv.manawa.adeo.cloud/
 NODE_OPTIONS=--max-http-header-size=1000000000
-INSTALA_BASE_URL=https://instala-uat.leroymerlin.pt/
-INSTALA_CUSTOMER_PORTAL_BASE_URL=https://instalalmptuat.page.link/
+INSTALA_BASE_URL=https://instala-uat.leroymerlin.pt
+INSTALA_CUSTOMER_PORTAL_BASE_URL=https://instalalmptuat.page.link
 INSTALA_LOGIN_URL=https://instala.leroymerlin.pt/ping-auth?token=***
 TRANSLATION_INSTALA_CONFIRMATION_TEXT_ACCEPTANCE_CONDITIONS='Condições aceitas'
 ADEO_USERNAME=********
