add test set LMPTCOTAZO-321_verify_contact _access

--- a/cypress/e2e/features/.gitignore
+++ b/cypress/e2e/features/.gitignore
@@ -19,3 +19,4 @@
 !LMPTCOTAZO-275_verify_configuration_access.feature
 !LMPTCOTAZO-299_verify_analysis_access.feature
 !LMPTCOTAZO-306_verify_support_request_access.feature
+!LMPTCOTAZO-321_verify_contact _access.feature
