Updating cypress environment variables

--- a/.dev.env
+++ b/.dev.env
@@ -6,8 +6,7 @@ INSTALA_LOGIN_URL=https://instala.leroymerlin.pt/ping-auth?token=***
 TRANSLATION_INSTALA_CONFIRMATION_TEXT_ACCEPTANCE_CONDITIONS='Condições aceitas'
 ADEO_USERNAME=********
 ADEO_PASSWORD=********
-STORE_NAME=CHAVES
-PYXIS_NUMBER=123456
+STORE_NAME=TESTER
 CUSTOMER_FISCAL_ID=000000000
 CUSTOMER_NAME=Automation Test
 CUSTOMER_EMAIL=example@example.pt
