--- a/.prod.env
+++ b/.prod.env
@@ -6,8 +6,7 @@ INSTALA_LOGIN_URL=https://instala.leroymerlin.pt/ping-auth?token=***
 TRANSLATION_INSTALA_CONFIRMATION_TEXT_ACCEPTANCE_CONDITIONS='Condições aceites'
 ADEO_USERNAME=********
 ADEO_PASSWORD=********
-STORE_NAME=CHAVES
-PYXIS_NUMBER=#######
+STORE_NAME=TESTER
 CUSTOMER_FISCAL_ID=000000000
 CUSTOMER_NAME=Automation Test
 CUSTOMER_EMAIL=example@example.pt
@@ -17,6 +16,7 @@ CUSTOMER_COUNTRY=Country
 CUSTOMER_CITY=City
 CUSTOMER_ADDRESS=RUA ...
 CUSTOMER_ADDRESS_NUMBER=##
+SERVICE_GROUP=Móvel de Casa de Banho
 SUPPLIER_NAME=Supplier ...
 COTAZO_MODERATOR_USERNAME=*********
 COTAZO_MODERATOR_PASSWORD=*********
