addition of the variable "URL_ADEO" in the cypress environment variables

--- a/.dev.env
+++ b/.dev.env
@@ -1,4 +1,5 @@
 BASE_URL=https://front-fe-qua.gke-mutu-nprd-mxiq.priv.manawa.adeo.cloud/
+URL_ADEO=https://idpb2e-prp.adeo.com/
 NODE_OPTIONS=--max-http-header-size=1000000000
 INSTALA_BASE_URL=https://instala-uat.leroymerlin.pt
 INSTALA_CUSTOMER_PORTAL_BASE_URL=https://instalalmptuat.page.link
