--- a/.prod.env
+++ b/.prod.env
@@ -1,4 +1,5 @@
-BASE_URL=https://orcamentos.leroymerlin.pt
+BASE_URL=https://orcamentos.leroymerlin.pt/
+URL_ADEO=https://idpb2e.adeo.com/
 NODE_OPTIONS=--max-http-header-size=1000000000
 INSTALA_BASE_URL=https://instala.leroymerlin.pt
 INSTALA_CUSTOMER_PORTAL_BASE_URL=https://instala-client.leroymerlin.pt
