--- a/cypress/e2e/features/.gitignore
+++ b/cypress/e2e/features/.gitignore
@@ -20,3 +20,10 @@
 !LMPTCOTAZO-299_verify_analysis_access.feature
 !LMPTCOTAZO-306_verify_support_request_access.feature
 !LMPTCOTAZO-321_verify_contact _access.feature
+!LMPTCOTAZO-349_budget_creation_steps_on_tablet.feature
+!LMPTCOTAZO-361_budget_creation_steps_on_mobile.feature
+!LMPTCOTAZO-371_budget_creation_on_tablet.feature
+!LMPTCOTAZO-373_budget_creation_on_mobile.feature
+!LMPTCOTAZO-376_support_request_on_tablet.feature
+!LMPTCOTAZO-376_support_request_on_tablet.feature
+!
