Addition of the feature support request for mobile displays

--- a/cypress/e2e/features/.gitignore
+++ b/cypress/e2e/features/.gitignore
@@ -26,4 +26,4 @@
 !LMPTCOTAZO-373_budget_creation_on_mobile.feature
 !LMPTCOTAZO-376_support_request_on_tablet.feature
 !LMPTCOTAZO-376_support_request_on_tablet.feature
-!
+!LMPTCOTAZO-382_support_request_on_mobile.feature
