--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "multiple-cucumber-html-reporter": "^1.21.4"
   },
   "dependencies": {
+    "buffer": "^6.0.3",
+    "cypress-promise": "^1.1.0",
     "cypress-wait-until": "^1.7.2",
     "env-cmd": "^10.1.0",
     "moment": "^2.29.4",
