incorporation of cypress environment variables for identifiers used in UAT and PROD

--- a/.dev.env
+++ b/.dev.env
@@ -2,6 +2,10 @@ BASE_URL=https://front-fe-qua.gke-mutu-nprd-mxiq.priv.manawa.adeo.cloud/
 URL_ADEO=https://idpb2e-prp.adeo.com/
 NODE_OPTIONS=--max-http-header-size=1000000000
 INSTALA_BASE_URL=https://instala-uat.leroymerlin.pt
+INSTALA_PING_AUTH_URL_SCHEMA=https://
+INSTALA_PING_AUTH_SUBDOMAIN=instala.leroymerlin.pt
+INSTALA_PING_AUTH_PATH=/ping-auth
+INSTALA_COCKPIT_PATH=/cockpit
 INSTALA_CUSTOMER_PORTAL_BASE_URL=https://instalalmptuat.page.link
 TRANSLATION_INSTALA_CONFIRMATION_TEXT_ACCEPTANCE_CONDITIONS='Condições aceitas'
 ADEO_USERNAME=********
@@ -17,6 +21,14 @@ CUSTOMER_CITY=City
 CUSTOMER_ADDRESS=RUA ...
 CUSTOMER_ADDRESS_NUMBER=##
 SERVICE_GROUP=Móvel de Casa de Banho
+CALENDAR_ID_IN_SERVICE_ORDER_CREATION="scheduleDate_body"
+PICKER_SELECT_ID_IN_SERVICE_ORDER_DETAIL="#date-select-distribute"
+CALENDAR_MONTH_IN_SERVICE_ORDER_DETAIL=':nth-child(2) > .CalendarMonth > .CalendarMonth_caption > strong'
+SUPPLIER_SELECT_IN_SERVICE_ORDER_DETAIL='.provider-select-distribute .react-select__value-container'
+SUPPLIER_INPUT_IN_SERVICE_ORDER_DETAIL='#react-select-3-option-0'
+COMMENT_INPUT_IN_SERVICE_ORDER_DETAIL='#justify'
+TURN_SELECT_IN_SERVICE_ORDER_DETAIL='.period-select-distribute > .css-2b097c-container > .react-select__control'
+SERVICE_TYPE=Visita Orç
 SUPPLIER_NAME=Supplier ...
 COTAZO_MODERATOR_USERNAME=*********
 COTAZO_MODERATOR_PASSWORD=*********
