--- a/.prod.env
+++ b/.prod.env
@@ -2,6 +2,10 @@ BASE_URL=https://orcamentos.leroymerlin.pt/
 URL_ADEO=https://idpb2e.adeo.com/
 NODE_OPTIONS=--max-http-header-size=1000000000
 INSTALA_BASE_URL=https://instala.leroymerlin.pt
+INSTALA_PING_AUTH_URL_SCHEMA=https://
+INSTALA_PING_AUTH_SUBDOMAIN=instala.leroymerlin.pt
+INSTALA_PING_AUTH_PATH=/ping-auth
+INSTALA_COCKPIT_PATH=/newCockpit
 INSTALA_CUSTOMER_PORTAL_BASE_URL=https://instala-client.leroymerlin.pt
 TRANSLATION_INSTALA_CONFIRMATION_TEXT_ACCEPTANCE_CONDITIONS='Condições aceites'
 ADEO_USERNAME=********
@@ -17,6 +21,14 @@ CUSTOMER_CITY=City
 CUSTOMER_ADDRESS=RUA ...
 CUSTOMER_ADDRESS_NUMBER=##
 SERVICE_GROUP=Móvel de Casa de Banho
+CALENDAR_ID_IN_SERVICE_ORDER_CREATION=date
+PICKER_SELECT_ID_IN_SERVICE_ORDER_DETAIL='#date'
+CALENDAR_MONTH_IN_SERVICE_ORDER_DETAIL='.SingleDatePicker__picker > .DayPicker > div > .DayPicker__focus-region > .transition-container > .CalendarMonthGrid > .CalendarMonth:nth-child(2) > .CalendarMonth__caption'
+SUPPLIER_SELECT_IN_SERVICE_ORDER_DETAIL='#servcPrvdrNm > .react-select__control'
+SUPPLIER_INPUT_IN_SERVICE_ORDER_DETAIL='#react-select-4-option-0'
+COMMENT_INPUT_IN_SERVICE_ORDER_DETAIL='#justificativa'
+TURN_SELECT_IN_SERVICE_ORDER_DETAIL='#idSlotApplication'
+SERVICE_TYPE=Visita Orç
 SUPPLIER_NAME=Supplier ...
 COTAZO_MODERATOR_USERNAME=*********
 COTAZO_MODERATOR_PASSWORD=*********
