--- a/.prod.env
+++ b/.prod.env
@@ -1,26 +1,26 @@
 BASE_URL=https://orcamentos.leroymerlin.pt/
 URL_ADEO=https://idpb2e.adeo.com/
-NODE_OPTIONS=--max-http-header-size=1000000000
+NODE_OPTIONS=--max-http-header-size=1000000
 INSTALA_BASE_URL=https://instala.leroymerlin.pt
-INSTALA_PING_AUTH_URL_SCHEMA=https://
+PING_AUTH_URL_SCHEMA=https://
 INSTALA_PING_AUTH_SUBDOMAIN=instala.leroymerlin.pt
 INSTALA_PING_AUTH_PATH=/ping-auth
 INSTALA_COCKPIT_PATH=/newCockpit
 INSTALA_CUSTOMER_PORTAL_BASE_URL=https://instala-client.leroymerlin.pt
 TRANSLATION_INSTALA_CONFIRMATION_TEXT_ACCEPTANCE_CONDITIONS='Condições aceites'
-ADEO_USERNAME=********
-ADEO_PASSWORD=********
-STORE_NAME=TESTER
+ADEO_USERNAME=00000000
+ADEO_PASSWORD=00000000
+STORE_NAME=TESTE
 CUSTOMER_FISCAL_ID=000000000
-CUSTOMER_NAME=Automation Test
-CUSTOMER_EMAIL=example@example.pt
-CUSTOMER_PHONE_NUMBER=913######
-CUSTOMER_POSTAL_CODE=####-###
-CUSTOMER_COUNTRY=Country
-CUSTOMER_CITY=City
-CUSTOMER_ADDRESS=RUA ...
-CUSTOMER_ADDRESS_NUMBER=##
-SERVICE_GROUP=Móvel de Casa de Banho
+CUSTOMER_NAME=Customer example
+CUSTOMER_EMAIL=example@leroymerlin.pt
+CUSTOMER_PHONE_NUMBER=000000000
+CUSTOMER_POSTAL_CODE=1111-111
+CUSTOMER_COUNTRY=Portugal
+CUSTOMER_CITY=Teste
+CUSTOMER_ADDRESS=Rua de Teste
+CUSTOMER_ADDRESS_NUMBER=10
+SERVICE_GROUP=A1
 CALENDAR_ID_IN_SERVICE_ORDER_CREATION=date
 PICKER_SELECT_ID_IN_SERVICE_ORDER_DETAIL='#date'
 CALENDAR_MONTH_IN_SERVICE_ORDER_DETAIL='.SingleDatePicker__picker > .DayPicker > div > .DayPicker__focus-region > .transition-container > .CalendarMonthGrid > .CalendarMonth:nth-child(2) > .CalendarMonth__caption'
@@ -29,11 +29,12 @@ SUPPLIER_INPUT_IN_SERVICE_ORDER_DETAIL='#react-select-4-option-0'
 COMMENT_INPUT_IN_SERVICE_ORDER_DETAIL='#justificativa'
 TURN_SELECT_IN_SERVICE_ORDER_DETAIL='#idSlotApplication'
 SERVICE_TYPE=Visita Orç
-SUPPLIER_NAME=Supplier ...
-COTAZO_MODERATOR_USERNAME=*********
-COTAZO_MODERATOR_PASSWORD=*********
-COTAZO_INSTALLER_USERNAME=*********
-COTAZO_INSTALLER_PASSWORD=*********
-COTAZO_TECHNICIAN_USERNAME=*********
-COTAZO_TECHNICIAN_PASSWORD=*********
-TECHNICIAN_EMAIL=example@example.pt
+SUPPLIER_NAME=example prestador
+SERVICE_ORDER_NUMBER=000000
+COTAZO_MODERATOR_USERNAME=luis.a.goncalves@leroymerlin.pt
+COTAZO_MODERATOR_PASSWORD=ler123LM123!
+COTAZO_INSTALLER_USERNAME=jose.santos@test.adeo.com
+COTAZO_INSTALLER_PASSWORD=ler123LM123!
+COTAZO_TECHNICIAN_USERNAME=jessica.g.fuentes@ext.leroymerlin.pt
+COTAZO_TECHNICIAN_PASSWORD=ler123LM123!
+TECHNICIAN_EMAIL=jessica.g.fuentes+3@ext.leroymerlin.pt
