--- a/cypress/e2e/features/.gitignore
+++ b/cypress/e2e/features/.gitignore
@@ -27,3 +27,4 @@
 !LMPTCOTAZO-376_support_request_on_tablet.feature
 !LMPTCOTAZO-376_support_request_on_tablet.feature
 !LMPTCOTAZO-382_support_request_on_mobile.feature
+!set_default_values.feature
