updating cypress environment variables

--- a/.prod.env
+++ b/.prod.env
@@ -31,10 +31,10 @@ TURN_SELECT_IN_SERVICE_ORDER_DETAIL='#idSlotApplication'
 SERVICE_TYPE=Visita Orç
 SUPPLIER_NAME=example prestador
 SERVICE_ORDER_NUMBER=000000
-COTAZO_MODERATOR_USERNAME=luis.a.goncalves@leroymerlin.pt
-COTAZO_MODERATOR_PASSWORD=ler123LM123!
-COTAZO_INSTALLER_USERNAME=jose.santos@test.adeo.com
-COTAZO_INSTALLER_PASSWORD=ler123LM123!
-COTAZO_TECHNICIAN_USERNAME=jessica.g.fuentes@ext.leroymerlin.pt
-COTAZO_TECHNICIAN_PASSWORD=ler123LM123!
-TECHNICIAN_EMAIL=jessica.g.fuentes+3@ext.leroymerlin.pt
+COTAZO_MODERATOR_USERNAME=example@leroymerlin.pt
+COTAZO_MODERATOR_PASSWORD=*************
+COTAZO_INSTALLER_USERNAME=example@leroymerlin.pt
+COTAZO_INSTALLER_PASSWORD=*************
+COTAZO_TECHNICIAN_USERNAME=example@leroymerlin.pt
+COTAZO_TECHNICIAN_PASSWORD=*************
+TECHNICIAN_EMAIL=example@leroymerlin.pt
